# swig_test

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  REAME.md  SIT_Federation_Empire_2010_Rulebook.xlsx  appveyor.yml  bats.blend  bats.fbx  boost-graph.cpp  circle32.blend  circle32.fbx  csv_to_json.py  cylinder32.blend  cylinder32.fbx  default_map.json  default_oob.json  default_oob.txt  directory_watcher.cpp  directory_watcher.h  hex.blend  hex.fbx  hex_border_side.blend  hex_border_side.fbx  hex_hover_indicator.blend  hex_hover_indicator.fbx  hex_map.h  hex_surface.blend  hex_surface.fbx  highlight_hex.blend  make_hex_borders.py  map.json  mb.blend  mb.fbx  model.cpp  msit_feds.csv  msit_feds.xlsx  msit_gorns.csv  msit_gorns.xlsx  (+34 more)
benchmark-1.0.0/: CMakeLists.txt
benchmark-1.0.0/src/: CMakeLists.txt
boost_1_60_0/boost/: throw_exception.hpp
boost_1_60_0/boost/config/: abi_prefix.hpp  suffix.hpp
boost_1_60_0/boost/exception/: diagnostic_information.hpp  exception.hpp  get_error_info.hpp  info.hpp  to_string.hpp  to_string_stub.hpp
boost_1_60_0/boost/graph/: named_function_params.hpp
boost_1_60_0/boost/pending/: container_traits.hpp
boost_1_60_0/boost/type_traits/: is_constructible.hpp  is_copy_constructible.hpp  is_default_constructible.hpp
boost_1_89_0/boost/core/: allocator_access.hpp  pointer_traits.hpp
boost_1_89_0/boost/iterator/: is_iterator.hpp
boost_1_89_0/boost/mp11/: algorithm.hpp
cmake/: data.hpp.in  make_data.cmake  make_data.py  test_data.hpp.in
counters/: retile.py
googletest-1.10.0/: CMakeLists.txt
googletest-1.10.0/googlemock/: CMakeLists.txt
googletest-1.10.0/googletest/: CMakeLists.txt
googletest-1.10.0/googletest/cmake/: internal_utils.cmake
googletest/googletest/cmake/: internal_utils.cmake
include/: model.hpp
jansson/: CMakeLists.txt
json2pb/: json2pb.cc  json2pb.h  source.txt
perf/: CMakeLists.txt  graph_perf.cpp
proto/: base_types.proto  game_data.proto  model.proto  start_data.proto  visual_config.proto
protobuf-3.13.0/cmake/: CMakeLists.txt
protobuf-v3.0.0-beta-2/cmake/: CMakeLists.txt
protobuf-v3.0.0-beta-2/csharp/src/: Google.Protobuf.sln
scenarios/: the_wind.json
sits/: SIT_Federation_Empire_2010_Rulebook.csv  csv_to_json.py  generic.csv  generic.xlsx  make_units.json.py  msit_feds.csv  msit_feds.xlsx  msit_gorns.csv  msit_gorns.xlsx  msit_hydrans.csv  msit_hydrans.xlsx  msit_klingon.csv  msit_klingon.xlsx  msit_kzinti.csv  msit_kzinti.xlsx  msit_lyran.csv  msit_lyran.xlsx  msit_orion.csv  msit_orion.xlsx  msit_rom.csv  msit_rom.xlsx  msit_tholian.csv  msit_tholian.xlsx
src/: CMakeLists.txt  build_protobuf_python.py  hex_operations.hpp  model.cpp  model_data.cpp  model_data.hpp  proto_to_cpp.py  protobuf_codegen.py  strings_to_string_table_csv.py  validation.hpp
tests/: CMakeLists.txt  dir_watcher_tests.cpp  flags_tests.cpp  formatter_tests.cpp  generation_tests.cpp  graph_tests.cpp  model_tests.cpp  serialize_impl_count_tests.cpp  serialize_impl_round_trip_tests.cpp  serialize_impl_test_messages.hpp  start_data_tests.cpp  test_data.hpp
unity_project/Assets/: battlestation.prefab  camera_controller.js  capital_star.prefab  capitol_star.prefab  centered_text.prefab  circle.prefab  counter.js  counter.prefab  game_data.js  game_setup.js  game_state.js  hex_surface.fbx  hex_surface.prefab  highlight_hex.fbx  highlight_hex.prefab  horizontal_listbox.prefab  list_element.prefab  listbox.js  listbox.prefab  listbox_text_row.prefab  load_menu.js  map_click_listener.js  map_interactions.js  new_game_menus.js  new_sp_game_setup.js  offmap_square.prefab  overlay.js  place_battlestation.js  place_border_gaps.js  place_borders_and_features.js  place_features.js  place_fleets.js  place_hexes.js  place_offmap_areas.js  place_starbase.js  place_tiles.js  procedural_battlestation.js  procedural_borders.js  procedural_hex.js  procedural_hex_borders.prefab  (+17 more)
unity_project/Assets/Materials/: alpha_back.mat  alpha_front.mat  bases_back.mat  bases_front.mat  bravo_back.mat  bravo_front.mat  circle.mat  counter.mat  counter.shader  counter_old.shader  counters_front.mat  hex_surface.mat  hex_surface.shader  hex_surface_gaps.mat  hex_surface_gaps.shader  highlight_hex.mat  highlight_overlay.shader  primary_national_color.mat  secondary_national_color.mat  solid_color_feature.mat  solid_color_feature.shader  solid_national_color.shader
unity_project/Assets/counter_assignment/: alpha_front.mat  assign_counters.js  bases_back.mat  bases_front.mat  bravo_front.mat  counter_assign.unity  counter_block.js  counter_block.prefab  counter_block_piece.js  counter_block_piece.mat  counter_block_piece.prefab  counter_camera_controller.js  counter_sheet.js  counter_sheet_column.js  counter_sheet_column.prefab  counters_front.mat
unity_project/Assets/plugins/: Model.cs  data.cs  func.cs  graph.cs  graph_algo.cs  gui_utils.js  model_plugin.cs  std_pair.cs
unity_project/ProjectSettings/: InputManager.asset  ProjectSettings.asset  QualitySettings.asset
unreal_project/: forex_notes
unreal_project/Fresh/: Fresh.uproject  default_oob.json
unreal_project/Fresh/Config/: DefaultEngine.ini  DefaultGame.ini
unreal_project/Fresh/Content/: TestLevel.umap  bats.uasset  edge_of_map_hex_mesh.uasset  hex_border_mat.uasset  hex_mat.uasset  hex_mesh.uasset  star5.uasset  thin_hex_border_mat.uasset  unit_slope_curve.uasset
unreal_project/Fresh/Source/: Fresh.Target.cs  FreshEditor.Target.cs
unreal_project/Spaceport/: Spaceport.sln  Spaceport.uproject  default_map.json  hex_map_config.json  star_names.txt  unit_counters.json  units.json  visual_config.json
unreal_project/Spaceport/Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
unreal_project/Spaceport/Content/: TestLevel.umap  circle32.uasset  cylinder32.uasset  edge_of_map_hex_mesh.uasset  hex.uasset  hex_border_mat.uasset  hex_border_side.uasset  hex_hover_indicator.uasset  hex_mat.uasset  hex_mesh.uasset  highlight_hex.uasset  mb.uasset  sb.uasset  sigmoid_curve.uasset  star5.uasset  star6.uasset  star8.uasset  star_names.uasset  strings.uasset  (+5 more)
(+418 files in other folders)
